--- a/bin/order/CartScreen.fxml
+++ b/bin/order/CartScreen.fxml
@@ -1,24 +1,46 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.CartController">
+<AnchorPane xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.CartController">
    <children>
-      <TableView fx:id="added_dish_table" layoutX="115.0" layoutY="49.0" prefHeight="200.0" prefWidth="395.0">
-        <columns>
-          <TableColumn fx:id="dish_col" prefWidth="75.0" text="Dish" />
-          <TableColumn fx:id="price_col" prefWidth="75.0" text="Price" />
-            <TableColumn fx:id="cook_lvl_col" prefWidth="91.0" text="Cook level" />
-            <TableColumn fx:id="size_col" prefWidth="75.0" text="Size" />
-            <TableColumn fx:id="extras_col" prefWidth="75.0" text="Extras" />
-        </columns>
-      </TableView>
-      <Button fx:id="back_btn" layoutX="268.0" layoutY="343.0" mnemonicParsing="false" onAction="#back" text="Back" />
-      <Button fx:id="checkout_btn" layoutX="252.0" layoutY="296.0" mnemonicParsing="false" onAction="#checkout" text="Checkout" />
-      <Label fx:id="total_label" layoutX="276.0" layoutY="260.0" text="Total:" />
+      <VBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <children>
+            <HBox>
+               <children>
+                  <ScrollPane hbarPolicy="NEVER" styleClass="transparent" stylesheets="@../general/GeneralStyleSheet.css">
+                     <content>
+                        <VBox fx:id="cart_items_vbox" />
+                     </content>
+                  </ScrollPane>
+               </children>
+            </HBox>
+            <HBox minHeight="-Infinity" minWidth="-Infinity">
+               <children>
+                  <Label text="Total Price: ">
+                     <HBox.margin>
+                        <Insets right="10.0" />
+                     </HBox.margin>
+                  </Label>
+                  <Label fx:id="total_price_label" text="price">
+                     <HBox.margin>
+                        <Insets left="10.0" />
+                     </HBox.margin>
+                  </Label>
+               </children>
+            </HBox>
+            <HBox alignment="CENTER" minHeight="-Infinity" minWidth="-Infinity">
+               <children>
+                  <Button fx:id="checkout_btn" mnemonicParsing="false" onAction="#checkout" text="Checkout" />
+               </children>
+            </HBox>
+         </children>
+      </VBox>
    </children>
-</Pane>
+</AnchorPane>
