--- a/bin/order/ChooseBranchScreen.fxml
+++ b/bin/order/ChooseBranchScreen.fxml
@@ -3,18 +3,45 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.ChooseBranchController">
+<AnchorPane prefHeight="349.0" prefWidth="427.0" styleClass="pane" stylesheets="@../general/GeneralStyleSheet.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.ChooseBranchController">
    <children>
-      <Label layoutX="168.0" layoutY="67.0" text="Choose Branch" textAlignment="CENTER">
-         <font>
-            <Font size="40.0" />
-         </font>
-      </Label>
-      <ComboBox fx:id="choose_branch_combo_box" layoutX="232.0" layoutY="158.0" prefHeight="31.0" prefWidth="155.0" promptText="Choose Branch" />
-      <Button fx:id="view_menu_btn" layoutX="268.0" layoutY="252.0" mnemonicParsing="false" onAction="#viewMenu" text="View Menu" />
-      <Button fx:id="back_btn" layoutX="61.0" layoutY="335.0" mnemonicParsing="false" onAction="#back" text="Back" />
+      <BorderPane prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <center>
+            <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+               <children>
+                  <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                     <children>
+                        <Label text="Choose Branch" textAlignment="CENTER">
+                           <font>
+                              <Font size="40.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                     <children>
+                        <ComboBox fx:id="choose_branch_combo_box" prefHeight="31.0" prefWidth="155.0" promptText="Choose Branch" styleClass="comboBox" stylesheets="@../general/GeneralStyleSheet.css" />
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                     <children>
+                        <Button fx:id="view_menu_btn" mnemonicParsing="false" onAction="#viewMenu" styleClass="btn" stylesheets="@../general/GeneralStyleSheet.css" text="View Menu" />
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
+                     <children>
+                        <Button fx:id="back_btn" mnemonicParsing="false" onAction="#back" text="Back" />
+                     </children>
+                  </HBox>
+               </children>
+            </VBox>
+         </center>
+      </BorderPane>
    </children>
-</Pane>
+</AnchorPane>
