--- a/src/gui/order/OrderConfirmedScreen.fxml
+++ b/src/gui/order/OrderConfirmedScreen.fxml
@@ -3,21 +3,81 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
-<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="515.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.OrderConfirmedController">
+<AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.OrderConfirmedController">
    <children>
-      <Label fx:id="order_number_output" layoutX="70.0" layoutY="59.0" text="Order #" />
-      <Label layoutX="62.0" layoutY="129.0" text="Your order is confirmed." />
-      <Label layoutX="62.0" layoutY="157.0" text="We've accepted your order and we're getting it ready." />
-      <Separator layoutX="62.0" layoutY="107.0" prefHeight="3.0" prefWidth="332.0" />
-      <Separator layoutX="49.0" layoutY="199.0" prefHeight="3.0" prefWidth="355.0" />
-      <Label layoutX="62.0" layoutY="215.0" text="Order Information" />
-      <Label layoutX="62.0" layoutY="247.0" text="Supply Method" />
-      <Label layoutX="62.0" layoutY="306.0" text="Supply Time" />
-      <Label fx:id="supply_method_output" layoutX="62.0" layoutY="277.0" />
-      <Label fx:id="supply_time_output" layoutX="62.0" layoutY="339.0" />
-      <Button fx:id="home_btn" layoutX="258.0" layoutY="438.0" mnemonicParsing="false" onAction="#goHome" text="Home" />
+      <BorderPane prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <center>
+            <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+               <children>
+                  <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                     <children>
+                        <Label fx:id="order_number_output" text="Order #" />
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                     <children>
+                        <Separator prefHeight="3.0" prefWidth="332.0" />
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                     <children>
+                        <Label text="Your order is confirmed." />
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                     <children>
+                        <Label text="We've accepted your order and we're getting it ready." />
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                     <children>
+                        <Separator prefHeight="3.0" prefWidth="355.0" />
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                     <children>
+                        <Label text="Order Information" />
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                     <children>
+                        <Label text="Supply Method" />
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                     <children>
+                        <Label fx:id="supply_method_output" />
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                     <children>
+                        <Label text="Supply Time" />
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                     <children>
+                        <Label fx:id="supply_time_output" />
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                     <children>
+                        <Label fx:id="total_payment_label" text="Total Payment: " />
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                     <children>
+                        <Button fx:id="home_btn" mnemonicParsing="false" onAction="#goHome" text="Home" />
+                     </children>
+                  </HBox>
+               </children>
+            </VBox>
+         </center>
+      </BorderPane>
    </children>
-</Pane>
+</AnchorPane>
