--- a/src/gui/order/OrderInformationScreen.fxml
+++ b/src/gui/order/OrderInformationScreen.fxml
@@ -7,76 +7,106 @@
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ToggleGroup?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="439.0" prefWidth="543.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.OrderInformationController">
+<AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.OrderInformationController">
    <children>
-      <VBox fx:id="order_summary" layoutX="419.0" layoutY="25.0" prefHeight="200.0" prefWidth="100.0">
-         <children>
-            <GridPane prefHeight="198.0" prefWidth="100.0">
-              <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-              </columnConstraints>
-              <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-              </rowConstraints>
-            </GridPane>
-         </children>
-      </VBox>
-      <Pane fx:id="delivery_pane" layoutX="43.0" layoutY="95.0" />
-      <DatePicker fx:id="date_input" layoutX="229.0" layoutY="34.0" prefHeight="31.0" prefWidth="136.0" promptText="Supply Date" />
-      <TextField fx:id="hour_input" layoutX="114.0" layoutY="34.0" prefHeight="31.0" prefWidth="106.0" promptText="Supply Hour" />
-      <Label layoutX="14.0" layoutY="39.0" text="Supply Time:" />
-      <Button fx:id="continue_btn" layoutX="347.0" layoutY="379.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#continueCheckout" text="Continue With Checkout" />
-      <Button fx:id="back_btn" layoutX="18.0" layoutY="379.0" mnemonicParsing="false" onAction="#back" text="Back" />
-      <GridPane fx:id="delivery_details" hgap="5.0" layoutX="35.0" layoutY="72.0" prefHeight="295.0" prefWidth="344.0" vgap="5.0" visible="false">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="-Infinity" />
-        </columnConstraints>
-        <rowConstraints>
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-         <children>
-            <TextField fx:id="first_name_input" promptText="First Name" GridPane.rowIndex="3" />
-            <TextField fx:id="last_name_input" promptText="Last Name" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-            <TextField fx:id="phone_input" promptText="Phone Number" GridPane.columnSpan="2" GridPane.rowIndex="4" />
-            <TextField fx:id="company_input" prefHeight="31.0" prefWidth="392.0" promptText="Company(Optional)" GridPane.columnSpan="2" GridPane.rowIndex="5" />
-            <TextField fx:id="street_input" prefHeight="31.0" prefWidth="392.0" promptText="Street" GridPane.columnSpan="2" GridPane.rowIndex="6" />
-            <TextField fx:id="city_input" promptText="City" GridPane.rowIndex="7">
-               <GridPane.margin>
-                  <Insets bottom="5.0" right="5.0" top="5.0" />
-               </GridPane.margin>
-            </TextField>
-            <TextField fx:id="zip_input" promptText="Zip" GridPane.columnIndex="1" GridPane.rowIndex="7" />
-            <Label text="Delivery Address" GridPane.columnSpan="2" GridPane.rowIndex="2" />
-            <RadioButton fx:id="private_btn" mnemonicParsing="false" selected="true" text="Private" GridPane.rowIndex="1">
-               <toggleGroup>
-                  <ToggleGroup fx:id="delivery_type" />
-               </toggleGroup>
-            </RadioButton>
-            <RadioButton fx:id="shared_btn" mnemonicParsing="false" text="Shared" toggleGroup="$delivery_type" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <RadioButton fx:id="robot_btn" mnemonicParsing="false" prefHeight="21.0" text="Robot - TBD" toggleGroup="$delivery_type" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-            <Label text="Delivery Type" />
-         </children>
-         <padding>
-            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-         </padding>
-      </GridPane>
+      <BorderPane prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <center>
+            <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+               <children>
+                  <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                     <children>
+                        <Label text="Supply Time:">
+                           <HBox.margin>
+                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                           </HBox.margin>
+                        </Label>
+                        <TextField fx:id="hour_input" prefHeight="31.0" prefWidth="106.0" promptText="Supply Hour">
+                           <HBox.margin>
+                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                           </HBox.margin>
+                        </TextField>
+                        <DatePicker fx:id="date_input" prefHeight="31.0" prefWidth="136.0" promptText="Supply Date">
+                           <HBox.margin>
+                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                           </HBox.margin>
+                        </DatePicker>
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER" prefHeight="241.0" prefWidth="800.0">
+                     <children>
+                        <VBox prefHeight="200.0" prefWidth="100.0" HBox.hgrow="ALWAYS">
+                           <children>
+                              <GridPane fx:id="delivery_details" hgap="5.0" prefHeight="295.0" prefWidth="344.0" vgap="5.0" visible="false">
+                                <columnConstraints>
+                                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                    <ColumnConstraints hgrow="SOMETIMES" minWidth="-Infinity" />
+                                </columnConstraints>
+                                <rowConstraints>
+                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                </rowConstraints>
+                                 <children>
+                                    <TextField fx:id="first_name_input" promptText="First Name" GridPane.rowIndex="3" />
+                                    <TextField fx:id="last_name_input" promptText="Last Name" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                                    <TextField fx:id="phone_input" promptText="Phone Number" GridPane.columnSpan="2" GridPane.rowIndex="4" />
+                                    <TextField fx:id="company_input" prefHeight="31.0" prefWidth="392.0" promptText="Company(Optional)" GridPane.columnSpan="2" GridPane.rowIndex="5" />
+                                    <TextField fx:id="street_input" prefHeight="31.0" prefWidth="392.0" promptText="Street" GridPane.columnSpan="2" GridPane.rowIndex="6" />
+                                    <TextField fx:id="city_input" promptText="City" GridPane.rowIndex="7">
+                                       <GridPane.margin>
+                                          <Insets bottom="5.0" right="5.0" top="5.0" />
+                                       </GridPane.margin>
+                                    </TextField>
+                                    <TextField fx:id="zip_input" promptText="Zip" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+                                    <Label text="Delivery Address" GridPane.columnSpan="2" GridPane.rowIndex="2" />
+                                    <RadioButton fx:id="private_btn" mnemonicParsing="false" selected="true" text="Private" GridPane.rowIndex="1">
+                                       <toggleGroup>
+                                          <ToggleGroup fx:id="delivery_type" />
+                                       </toggleGroup>
+                                    </RadioButton>
+                                    <RadioButton fx:id="shared_btn" mnemonicParsing="false" text="Shared" toggleGroup="$delivery_type" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                    <RadioButton fx:id="robot_btn" mnemonicParsing="false" prefHeight="21.0" text="Robot - TBD" toggleGroup="$delivery_type" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                                    <Label text="Delivery Type" />
+                                 </children>
+                                 <padding>
+                                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                 </padding>
+                              </GridPane>
+                           </children>
+                        </VBox>
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                     <children>
+                        <Button fx:id="back_btn" mnemonicParsing="false" onAction="#back" text="Back">
+                           <HBox.margin>
+                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                           </HBox.margin>
+                        </Button>
+                        <Button fx:id="continue_btn" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#continueCheckout" text="Continue With Checkout">
+                           <HBox.margin>
+                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                           </HBox.margin>
+                        </Button>
+                     </children>
+                  </HBox>
+               </children>
+            </VBox>
+         </center>
+      </BorderPane>
    </children>
-</Pane>
+</AnchorPane>
