--- a/src/gui/server/serverFXML.fxml
+++ b/src/gui/server/serverFXML.fxml
@@ -1,47 +1,99 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="server.serverController">
+<AnchorPane prefHeight="600.0" prefWidth="800.0" styleClass="pane" stylesheets="@../general/GeneralStyleSheet.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="server.serverController">
    <children>
-      <GridPane layoutX="120.0" layoutY="60.0" prefHeight="302.0" prefWidth="354.0">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-         <children>
-            <TextField fx:id="ip_input" text="localhost" GridPane.columnIndex="1" />
-            <TextField fx:id="port_input" text="5555" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <TextField fx:id="db_name_input" text="biteme" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <TextField fx:id="db_user_input" text="root" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-            <Label fx:id="IP_label" text="IP" />
-            <Label fx:id="Port_label" text="Port" GridPane.rowIndex="1" />
-            <Label fx:id="db_name_label" text="DB Name" GridPane.rowIndex="2" />
-            <Label fx:id="db_user_label" text="DB User" GridPane.rowIndex="3" />
-            <Label fx:id="db_password_label" text="DB Password" GridPane.rowIndex="4" />
-            <Button fx:id="connect_btn" mnemonicParsing="false" onAction="#connectToDB" text="Connect" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-            <Button fx:id="disconnect_btn" mnemonicParsing="false" onAction="#disconnectFromDB" text="Disconnect" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-            <Button fx:id="close_btn" mnemonicParsing="false" onAction="#close_window" text="Close" GridPane.columnIndex="1" GridPane.rowIndex="7" />
-            <Label fx:id="connect_status" text="    " GridPane.rowIndex="5" />
-            <PasswordField fx:id="db_pass_input" text="Aa123456" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-         </children>
-      </GridPane>
+      <BorderPane prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <center>
+            <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+               <children>
+                  <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                     <children>
+                        <Label fx:id="IP_label" text="IP">
+                           <HBox.margin>
+                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                           </HBox.margin></Label>
+                        <TextField fx:id="ip_input" text="localhost" />
+                     </children>
+                     <VBox.margin>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </VBox.margin>
+                  </HBox>
+                  <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                     <children>
+                        <Label fx:id="Port_label" text="Port">
+                           <HBox.margin>
+                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                           </HBox.margin></Label>
+                        <TextField fx:id="port_input" text="5555">
+                           <HBox.margin>
+                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                           </HBox.margin></TextField>
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                     <children>
+                        <Label fx:id="db_name_label" text="DB Name">
+                           <HBox.margin>
+                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                           </HBox.margin></Label>
+                        <TextField fx:id="db_name_input" text="biteme" />
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                     <children>
+                        <Label fx:id="db_user_label" text="DB User">
+                           <HBox.margin>
+                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                           </HBox.margin></Label>
+                        <TextField fx:id="db_user_input" text="root" />
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                     <children>
+                        <Label fx:id="db_password_label" text="DB Password">
+                           <HBox.margin>
+                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                           </HBox.margin></Label>
+                        <PasswordField fx:id="db_pass_input" text="Aa123456" />
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                     <children>
+                        <Button fx:id="connect_btn" mnemonicParsing="false" onAction="#connectToDB" styleClass="btn" text="Connect">
+                           <HBox.margin>
+                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                           </HBox.margin></Button>
+                        <Button fx:id="disconnect_btn" mnemonicParsing="false" onAction="#disconnectFromDB" styleClass="btn" text="Disconnect">
+                           <HBox.margin>
+                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                           </HBox.margin></Button>
+                        <Label fx:id="connect_status" text="    ">
+                           <HBox.margin>
+                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                           </HBox.margin></Label>
+                     </children>
+                  </HBox>
+                  <HBox alignment="BASELINE_CENTER" prefHeight="100.0" prefWidth="200.0">
+                     <children>
+                        <Button fx:id="close_btn" mnemonicParsing="false" onAction="#close_window" styleClass="btn" text="Close">
+                           <HBox.margin>
+                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                           </HBox.margin></Button>
+                     </children>
+                  </HBox>
+               </children>
+            </VBox>
+         </center>
+      </BorderPane>
    </children>
-</Pane>
+</AnchorPane>
