--- a/bin/general/index2Screen.fxml
+++ b/bin/general/index2Screen.fxml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -10,53 +12,66 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="formIndex" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.IndexControllerD">
+<AnchorPane fx:id="formIndex" style="-fx-background-color: #fff;" stylesheets="@GeneralStyleSheet.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.IndexControllerD">
    <children>
-      <BorderPane prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0">
          <left>
-            <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+            <VBox prefHeight="663.0" prefWidth="270.0" BorderPane.alignment="CENTER">
                <children>
-                  <GridPane fx:id="options_grid1" prefHeight="400.0" prefWidth="104.0">
-                    <columnConstraints>
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                    </columnConstraints>
-                    <rowConstraints>
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                    </rowConstraints>
-                  </GridPane>
+                  <HBox alignment="CENTER" style="-fx-background-color: #F7C665;">
+                     <children>
+                        <GridPane fx:id="options_grid1" alignment="TOP_CENTER" focusTraversable="true" maxWidth="-Infinity" prefHeight="661.0" prefWidth="150.0" style="-fx-background-color: #F7C665;">
+                          <columnConstraints>
+                            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                          </columnConstraints>
+                          <rowConstraints>
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                          </rowConstraints>
+                        </GridPane>
+                     </children>
+                  </HBox>
                </children>
             </VBox>
          </left>
          <top>
-            <VBox alignment="CENTER" fillWidth="false" minHeight="-Infinity" minWidth="-Infinity" prefHeight="56.0" prefWidth="419.0" BorderPane.alignment="CENTER">
+            <HBox layoutX="100.0" prefHeight="145.0" prefWidth="999.0" BorderPane.alignment="CENTER">
                <children>
-                  <HBox alignment="CENTER" VBox.vgrow="ALWAYS">
+                  <AnchorPane prefHeight="142.0" prefWidth="270.0" style="-fx-background-color: #F9E3B4;">
                      <children>
-                        <Label fx:id="welcom_label" text="Welcome BiteMe">
+                        <ImageView fitHeight="103.0" fitWidth="85.0" layoutX="-3.0" layoutY="-9.0" pickOnBounds="true" preserveRatio="true" translateX="90.0" translateY="70.0">
+                           <image>
+                              <Image url="@MaleIcon.png" />
+                           </image>
+                        </ImageView>
+                        <Label fx:id="hello_label" prefHeight="25.0" prefWidth="183.0" text="Label" textAlignment="CENTER" translateX="80.0" translateY="40.0">
                            <font>
-                              <Font size="24.0" />
+                              <Font name="Levenim MT" size="15.0" />
                            </font>
                         </Label>
                      </children>
-                  </HBox>
-                  <HBox alignment="CENTER" VBox.vgrow="ALWAYS">
-                     <children>
-                        <Label fx:id="hello_label" prefHeight="18.0" prefWidth="134.0" text="Label" />
-                     </children>
-                  </HBox>
+                  </AnchorPane>
+                  <Label fx:id="welcome_label" text="Welcome to BiteMe" translateX="220.0">
+                     <font>
+                        <Font name="Levenim MT Bold" size="64.0" />
+                     </font>
+                  </Label>
                </children>
-            </VBox>
+            </HBox>
          </top>
          <center>
-            <AnchorPane fx:id="paneInPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" BorderPane.alignment="CENTER" />
+            <VBox prefHeight="200.0" prefWidth="100.0" style="-fx-background-color: #fff;" BorderPane.alignment="CENTER">
+               <children>
+                  <AnchorPane fx:id="paneInPane" prefHeight="662.0" prefWidth="993.0" style="-fx-background-color: #fff;" />
+               </children>
+            </VBox>
          </center>
       </BorderPane>
    </children>
